[gd_scene load_steps=28 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/Gas Station/tile.png" type="Texture" id=2]
[ext_resource path="res://Levels/Gas Station/Drinks.png" type="Texture" id=3]
[ext_resource path="res://NPCs/Clerk/Clerk.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/Gas Station/Easter Egg.gd" type="Script" id=5]
[ext_resource path="res://Levels/Gas Station/Wall.png" type="Texture" id=6]
[ext_resource path="res://Levels/Gas Station/BGMusic.wav" type="AudioStream" id=7]
[ext_resource path="res://Levels/Gas Station/Chips.png" type="Texture" id=8]
[ext_resource path="res://Levels/Gas Station_Part2/Gas Station2.gd" type="Script" id=9]
[ext_resource path="res://NPCs/Clerk/Clerk2.gd" type="Script" id=10]
[ext_resource path="res://Levels/Gas Station_Part2/Scream.wav" type="AudioStream" id=11]
[ext_resource path="res://Levels/Gas Station_Part2/Sirens.wav" type="AudioStream" id=12]
[ext_resource path="res://Levels/Gas Station Exterior/Door.png" type="Texture" id=13]
[ext_resource path="res://Levels/Gas Station_Part2/Door2.gd" type="Script" id=14]
[ext_resource path="res://Levels/Gas Station_Part2/Bitch.png" type="Texture" id=15]
[ext_resource path="res://Levels/Gas Station_Part2/BitchEx.gd" type="Script" id=16]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 2 )
uv1_scale = Vector3( 5, 5, 1 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.894118, 0.894118, 0.894118, 1 )

[sub_resource type="SpatialMaterial" id=5]
albedo_texture = ExtResource( 6 )
uv1_scale = Vector3( 1.5, 5, 1 )

[sub_resource type="SpatialMaterial" id=12]
albedo_color = Color( 0, 1, 0, 1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.35771, 0.312462, 1 )

[sub_resource type="BoxShape" id=13]
extents = Vector3( 0.338311, 2.50107, 1 )

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 3 )
uv1_scale = Vector3( 1, 0.101, 0.056 )
uv1_triplanar = true

[sub_resource type="SpatialMaterial" id=6]
albedo_texture = ExtResource( 8 )
uv1_scale = Vector3( 0.099, 0.146, 1 )
uv1_offset = Vector3( 0.5, 0, 0 )
uv1_triplanar = true

[sub_resource type="SpatialMaterial" id=9]
flags_transparent = true
albedo_texture = ExtResource( 13 )

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SirensSFX:unit_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "RisingVolume"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("SirensSFX:unit_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 30.0 ]
}

[node name="Gas Station" type="Spatial"]
script = ExtResource( 9 )

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 20 )

[node name="Architecture" type="Spatial" parent="."]

[node name="Floor" type="CSGBox" parent="Architecture"]
use_collision = true
width = 50.0
height = 0.1
depth = 50.0
material = SubResource( 1 )

[node name="Roof" type="CSGBox" parent="Architecture"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0 )
use_collision = true
width = 50.0
height = 0.1
depth = 50.0
material = SubResource( 1 )

[node name="Wall" type="CSGBox" parent="Architecture"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.0584, 5, 0 )
use_collision = true
height = 10.0
depth = 50.0
material = SubResource( 4 )

[node name="Wall2" type="CSGBox" parent="Architecture"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -24, 5, 0 )
use_collision = true
height = 10.0
depth = 50.0
material = SubResource( 5 )

[node name="Wall3" type="CSGBox" parent="Architecture"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 5, -11.0996 )
use_collision = true
height = 10.0
depth = 50.0
material = SubResource( 5 )

[node name="Wall4" type="CSGBox" parent="Architecture"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 5, 24 )
use_collision = true
height = 10.0
depth = 50.0
material = SubResource( 5 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )
light_energy = 0.5
omni_range = 71.761
omni_attenuation = 1.2394e-05

[node name="Counter" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, 12 )

[node name="CSGBox" type="CSGBox" parent="Counter"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.614166, 1.5, 3.76093 )
use_collision = true
height = 3.0
depth = 15.5342
material = SubResource( 12 )

[node name="CSGBox2" type="CSGBox" parent="Counter"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2.491, 1.499, -3.004 )
use_collision = true
height = 3.0
depth = 4.82588
material = SubResource( 12 )

[node name="Clerk" parent="Counter" instance=ExtResource( 4 )]
transform = Transform( -1.31134e-07, 0, 1, 0, 3, 0, -3, 0, -4.37114e-08, -3.04188, 3.98838, 4.32408 )
script = ExtResource( 10 )

[node name="Easter Egg" type="StaticBody" parent="Counter/Clerk"]
transform = Transform( 1, 0, 4.44089e-15, 0, 1, 0, 0, 0, 1, 0, -0.969605, 0 )
script = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="Counter/Clerk/Easter Egg"]
shape = SubResource( 3 )

[node name="ScreamSFX" type="AudioStreamPlayer3D" parent="Counter/Clerk"]
stream = ExtResource( 11 )
unit_db = 80.0
max_db = 6.0
bus = "SFX"

[node name="BitchEx" type="KinematicBody" parent="Counter"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 3, 2 )
visible = false
script = ExtResource( 16 )

[node name="Sprite3D" type="Sprite3D" parent="Counter/BitchEx"]
transform = Transform( 2.5, 0, 0, 0, 2.5, 0, 0, 0, 1, 0, 0, 0 )
billboard = 1
texture = ExtResource( 15 )

[node name="CollisionShape" type="CollisionShape" parent="Counter/BitchEx"]
shape = SubResource( 13 )
disabled = true

[node name="ComedicTimingTimer" type="Timer" parent="Counter/BitchEx"]
wait_time = 0.05
one_shot = true

[node name="Aisles" type="Spatial" parent="."]

[node name="DrinksWalls" type="Spatial" parent="Aisles"]

[node name="DrinksFridge" type="CSGCombiner" parent="Aisles/DrinksWalls"]

[node name="CSGBox" type="CSGBox" parent="Aisles/DrinksWalls/DrinksFridge"]
transform = Transform( -1, 0, -8.74228e-08, -8.74228e-08, -4.37114e-08, 1, -3.82137e-15, 1, 4.37114e-08, 10.6187, 4.98798, 9.27847 )
width = 1.23868
height = 17.3028
depth = 10.0
material = SubResource( 2 )

[node name="DrinksFridge2" type="CSGCombiner" parent="Aisles/DrinksWalls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -17.2439 )

[node name="CSGBox" type="CSGBox" parent="Aisles/DrinksWalls/DrinksFridge2"]
transform = Transform( -1, 0, -8.74228e-08, -8.74228e-08, -4.37114e-08, 1, -3.82137e-15, 1, 4.37114e-08, 10.6187, 4.98798, 9.27847 )
width = 1.23868
height = 17.3028
depth = 10.0
material = SubResource( 2 )

[node name="DrinksFridge3" type="CSGCombiner" parent="Aisles/DrinksWalls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 17.1716 )

[node name="CSGBox" type="CSGBox" parent="Aisles/DrinksWalls/DrinksFridge3"]
transform = Transform( -1, 0, -8.74228e-08, -8.74228e-08, -4.37114e-08, 1, -3.82137e-15, 1, 4.37114e-08, 10.6187, 4.98798, 9.27847 )
width = 1.23868
height = 17.3028
depth = 10.0
material = SubResource( 2 )

[node name="DrinksFridge4" type="CSGCombiner" parent="Aisles/DrinksWalls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -34.1083, 0, -10.2207 )

[node name="CSGBox" type="CSGBox" parent="Aisles/DrinksWalls/DrinksFridge4"]
transform = Transform( -1, 0, -8.74228e-08, -8.74228e-08, -4.37114e-08, 1, -3.82137e-15, 1, 4.37114e-08, 10.6187, 4.98798, 9.27847 )
width = 1.23868
height = 17.3028
depth = 10.0
material = SubResource( 2 )

[node name="DrinksFridge5" type="CSGCombiner" parent="Aisles/DrinksWalls"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -7.75298, 0, 0.171601 )

[node name="CSGBox" type="CSGBox" parent="Aisles/DrinksWalls/DrinksFridge5"]
transform = Transform( -1, 0, -8.74228e-08, -8.74228e-08, -4.37114e-08, 1, -3.82137e-15, 1, 4.37114e-08, 10.6187, 4.98798, 9.27847 )
width = 1.23868
height = 17.3028
depth = 10.0
material = SubResource( 2 )

[node name="DrinksFridge6" type="CSGCombiner" parent="Aisles/DrinksWalls"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -24.9672, 0, 0.171601 )

[node name="CSGBox" type="CSGBox" parent="Aisles/DrinksWalls/DrinksFridge6"]
transform = Transform( -1, 0, -8.74228e-08, -8.74228e-08, -4.37114e-08, 1, -3.82137e-15, 1, 4.37114e-08, 10.6187, 4.98798, 9.27847 )
width = 1.23868
height = 17.3028
depth = 10.0
material = SubResource( 2 )

[node name="ChipsAisle" type="Spatial" parent="Aisles"]

[node name="ChipsSquare" type="Spatial" parent="Aisles/ChipsAisle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 6 )

[node name="ChipAisle" type="CSGCombiner" parent="Aisles/ChipsAisle/ChipsSquare"]
transform = Transform( 0.00110699, 0.00232877, 0.999997, -0.000339096, 0.999997, -0.00232839, -0.999999, -0.000336505, 0.00110778, -5.96046e-08, 0, 0 )
use_collision = true

[node name="Chips" type="CSGBox" parent="Aisles/ChipsAisle/ChipsSquare/ChipAisle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
width = 10.0
height = 6.0
depth = 0.141371
material = SubResource( 6 )

[node name="ChipAisle2" type="CSGCombiner" parent="Aisles/ChipsAisle/ChipsSquare"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -10, 0, 0 )
use_collision = true

[node name="Chips" type="CSGBox" parent="Aisles/ChipsAisle/ChipsSquare/ChipAisle2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
width = 10.0
height = 6.0
depth = 0.141371
material = SubResource( 6 )

[node name="ChipAisle3" type="CSGCombiner" parent="Aisles/ChipsAisle/ChipsSquare"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 5 )
use_collision = true

[node name="Chips" type="CSGBox" parent="Aisles/ChipsAisle/ChipsSquare/ChipAisle3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
width = 10.2
height = 6.0
depth = 0.141371
material = SubResource( 6 )

[node name="ChipAisle4" type="CSGCombiner" parent="Aisles/ChipsAisle/ChipsSquare"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, -5 )
use_collision = true

[node name="Chips" type="CSGBox" parent="Aisles/ChipsAisle/ChipsSquare/ChipAisle4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
width = 10.2
height = 6.0
depth = 0.141371
material = SubResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -20.0
autoplay = true
bus = "Music"

[node name="Door" type="CSGBox" parent="."]
transform = Transform( -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, -0.71311, 3.23484, 23.9649 )
height = 8.20213
depth = 7.44241
material = SubResource( 9 )
script = ExtResource( 14 )

[node name="ReflectionTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="SirensSFX" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 32 )
stream = ExtResource( 12 )
bus = "SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="SirensSFX"]
root_node = NodePath("../..")
anims/RESET = SubResource( 11 )
anims/RisingVolume = SubResource( 10 )

[connection signal="timeout" from="Counter/BitchEx/ComedicTimingTimer" to="Counter/BitchEx" method="_on_ComedicTimingTimer_timeout"]
[connection signal="timeout" from="ReflectionTimer" to="." method="_on_ReflectionTimer_timeout"]

[editable path="Counter/Clerk"]
